<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Drawchemy</string>
    <string name="action_color">Colors</string>
    <string name="action_settings">Extra settings</string>
    <string name="action_create">Creators</string>
    <string name="action_create_settings">Creator settings</string>
    <string name="action_style">Switch Style</string>
    <string name="action_save">Save</string>
    <string name="action_load">Load</string>
    <string name="action_share">Share</string>
    <string name="action_clear">Clear</string>
    <string name="agree">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="finish">Finish</string>
    <string name="save">Canvas saved.</string>
    <string name="gradient">Gradient</string>
    <string name="about">About</string>
    <string name="close">Close</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="line">Line</string>
    <string name="scraw">Scraw</string>
    <string name="ribbon">Ribbon</string>
    <string name="splatter">Splatter</string>
    <string name="xshape">XShape</string>
    <string name="paintbrush">PainBrush</string>
    <string name="ball">Ball</string>
    <string name="basic_shapes">Basic Shapes</string>
    <string name="overflow">Overflow</string>
    <string name="pan_zoom">Pan and zoom</string>
    <string name="reset_view">Reset view</string>
    <string name="hue">Hue</string>
    <string name="saturation">Saturation</string>
    <string name="brightness">Brightness</string>
    <string name="alpha">Opacity</string>
    <string name="show_ui">Show UI</string>
    <string name="action_help">Help</string>
    <string name="extra_settings">Extra settings</string>
    <string name="horizontal">Horizontal mirror</string>
    <string name="vertical">Vertical mirror</string>
    <string name="kaleidoscope">Kaleidoscope</string>
    <string name="sketch_brush">Sketch brush</string>
    <string name="xshape2">XShape V2</string>
    <string name="straight_line">Straight Line</string>
    <string name="nearest_points">Web brush</string>
    <string name="pipette">Pipette</string>
    <!-- UI Texts-->
    <string name="hue_switch_enabled">Hue noise enabled</string>
    <string name="hue_switch_disabled">Hue noise disabled</string>
    <string name="clear_dialog">This will clear the canvas, are you sure ?</string>
    <string name="stroke_weight">Stroke width</string>
    <string name="empty_settings">There is no settings for this creator</string>
    <string name="noise">Noise</string>
    <string name="bristles">Bristles</string>
    <string name="flow">Flow</string>
    <string name="detail">Details</string>
    <string name="gravity">Gravity</string>
    <string name="friction">Friction</string>
    <string name="spacing">Spacing</string>
    <string name="radius">Radius</string>
    <string name="size">Size</string>
    <string name="drips">Drips</string>
    <string name="allowed_undos">Max Undos</string>
    <string name="kaleidoscope_option">Kaleidoscope</string>


    <!-- About Texts-->
    <string name="about_drawchemy">Drachemy is a Open Source project under the License GPLv3. You can
    go to the git repository by clicking on the icon.</string>
    <string name="about_alchemy">Drachemy is inspired by Alchemy : a drawing desktop application.
    You can visit their website by clicking on their icon.</string>
    <string name="about_tumblr">Drawchemy possess its own Tumblr. Click on the icon to visit.</string>
    <string name="about_mrdoob">Few brushes are from the web application harmony. You can access it by clicking on the icon.</string>

    <!-- Help Texts-->
    <string name="show_ui_description">Show/hide the User Interface.</string>
    <string name="creators_description">Display the list of brushes.</string>
    <string name="zoom_description">Enter in zoom/pan mode. Click again to exit this mode or click on another icon.</string>
    <string name="reset_view_description">Reset the scale and the position of the canvas.</string>
    <string name="settings_description">Display the settings of the current brush.</string>
    <string name="mirror_description">Enter in vertical reflection mode. All your shape will be reflected vertically. Click again to exit this mode. There is also a horizontal reflection mode.</string>
    <string name="unicolor_description">You are in the mono-color mode. Only the main color is used.
    Click on the icon to enter in gradient mode.</string>
    <string name="gradient_description">You are in the gradient mode.The main and the secondary color are used to paint your lines and shapes with a linear gradient.
    Click on the icon to go back to the mono-color mode.</string>
    <string name="stroke_description">You are in the stroke mode where you can draw lines.
    Click on the icon to enter in fill mode.</string>
    <string name="fill_description">You are in the fill mode where you can draw filled shapes.
    Click on the icon to go back to the stroke mode.</string>
    <string name="load_description">Load a image from your device and use it as background.
    The image is automatically scaled and rotated to fit your canvas for the best.
    Your previous work is completely erased.</string>
    <string name="colors_description">The two circles next to the Logo are the colors, the biggest is the main color, the smallest the secondary.
    If you click on the secondary color, this color become the main one. If you click on the main color, the color settings appear.
    You can access to the color settings in the menu.
    These settings allow you to change the main color and activate the hue noise. The hue noise will change randomly the hue of your lines and shapes.
    The intensity of the noise is settable by the slidebar bellow the hue noise checkbox.</string>
    <string name="brushes">Brushes</string>
    <string name="help_others">Others</string>
    <string name="effects">Effects</string>
    <string name="help_settings">Settings</string>
    <string name="help_mirrors">Mirrors</string>
    <string name="help_fill">fill</string>
    <string name="help_stroke">stroke</string>
    <string name="help_unicolor">unicolor</string>
    <string name="help_logo">hide UI</string>
    <string name="maxDist">Max Dist.</string>
    <string name="box">Box</string>
    <string name="circle">Circle</string>
    <string name="triangle">Triangle</string>
    <string name="random">Random</string>
    <string name="snapping">Spanning</string>
</resources>
