<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/i_line"
        android:title="@string/line"/>

    <item android:id="@+id/i_scraw"
        android:title="@string/scraw"/>

    <item android:id="@+id/i_ribbon"
        android:title="@string/ribbon"/>


    <item android:id="@+id/i_splatter"
        android:title="@string/splatter"/>

    <item android:id="@+id/i_xshape"
        android:title="@string/xshape"/>

    <item android:id="@+id/i_paintbrush"
        android:title="@string/paintbrush"/>

    <item android:id="@+id/i_ball"
        android:title="@string/ball"/>

    <item android:id="@+id/i_box"
        android:title="@string/box"/>

    <item
        android:id="@+id/i_straigtline"
        android:title="@string/straight_line" />

    <item
        android:id="@+id/i_nearestpoints"
        android:title="@string/nearest_points" />
</menu>