<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_margin="5dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/basic_shape_box"
            android:text="@string/box"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/basic_shape_circle"
            android:text="@string/circle"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/basic_shape_triangle"
            android:text="@string/triangle"
            android:layout_height="wrap_content" />

        <RadioButton
            android:layout_width="wrap_content"
            android:id="@+id/basic_shape_random"
            android:text="@string/random"
            android:layout_height="wrap_content" />
    </RadioGroup>
</LinearLayout>