<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
  <item
      android:id="@+id/i_color_switch"
      android:showAsAction="always"
      android:title="@string/colors"/>

  <item
      android:id="@+id/i_colors_wheel"
      android:icon="@drawable/ic_color_wheel"
      android:showAsAction="always"
      android:title="@string/colors">
  </item>

  <item
      android:id="@+id/i_reset_view"
      android:icon="@drawable/reset_view"
      android:showAsAction="always"
      android:title="@string/reset_view"/>

  <item
      android:id="@+id/i_creators"
      android:icon="@drawable/ic_action_edit"
      android:showAsAction="always"
      android:title="@string/brushes">
    <menu></menu>
  </item>

  <item
      android:id="@+id/i_overflow"
      android:icon="@drawable/ic_action_overflow"
      android:showAsAction="always"
      android:title="@string/overflow">
    <menu></menu>
  </item>

</menu>