<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/drawchemy_s" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/show_ui_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/ic_action_edit" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/creators_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/color" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/colors_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/ic_action_search" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/zoom_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/reset_view" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/reset_view_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/ic_action_settings" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/settings_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/flip_vertical" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/mirror_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/unicolor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/unicolor_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/gradient" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/gradient_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/stroke" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/stroke_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/fill" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/fill_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:padding="5dp">

            <ImageView
                android:background="#00000000"
                android:src="@drawable/ic_action_picture" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="clip_horizontal"
                android:maxEms="25"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:singleLine="false"
                android:text="@string/load_description"
                android:textAppearance="?android:attr/textAppearanceSmall" />
        </TableRow>

    </TableLayout>
</HorizontalScrollView>
</ScrollView>